app/stylesheets/_mixins.sass
@mixin lightbox
  background-color: #ebebeb
  +border-radius(15px)
  border: 10px solid #c5c5c5
  +box-shadow($default-box-shadow-color, 0, 0, $default-box-shadow-blur, 0, inset)
  padding: 25px

@mixin redlightbox
  background-color: #ac322f
  border-radius 4px
  -webkit-border-radius: 4px
  -mox-border-radius: 4px
  padding: 24px
  box-shadow: 0 0 18px 4px #f6fbeb
  -webkit-box-shadow: 0 0 18px 4px #f6fbeb
  -moz-box-shadow: 0 0 18px 4px #f6fbeb

@mixin styled-item($color)
  .header .header_text span.author
    color: $color
  a .reply_count
    color: $color

@mixin styledBox
  +box-shadow($lightestGray, 1px, 1px, 3px)
  +border-radius($defaultRadius)
  border: 1px solid $lightGray
  background: $itemBackground + #020202
  +linear-gradient(color-stops($itemBackground + #060606, $itemBackground ))

@mixin sans
  font-family: Helvetica, Arial, Verdana, sans-serif

@mixin serif
  font-family: Georgia, Times, serif
  font-family: Rockwell, Georgia, Times, "Times New Roman", serif

@mixin styledInput
  height: 14px
  padding: 4px
  border: 1px solid $mediumGray
  @include sans
  +border-radius(5px)

@mixin styled-button
  font-size: 1em
  cursor: pointer
  +border-radius(7px)
  +serif
  padding: 4px 7px
  background-color: $offWhite
  border: 1px solid $lightGray
  &:hover 
    border-color: #888

@mixin red-button
  float: right
  +box-shadow(#aaa, 0, 2px, 2px, 0, false)
  text-decoration: none
  font-weight: bold
  font-size: 10px
  +sans
  display: block
  background-color: $cpRed
  margin-top: 4px
  border: 1px solid $cpDarkRed - #111
  +border-radius(5px)
  input[type=submit]  
    background-color: transparent
    margin: 0
    color: white
    +text-shadow($cpDarkRed, 2px, 1px, 1px)
    cursor: pointer
    border: 1px solid $cpRed + #222
      bottom: 1px solid $cpDarkRed
    display: block
    padding: 3px 8px 4px
    +border-radius(5px)

@mixin oldStandardBold
  font-family: 'OldStandardTTBold', Times, serif
  font-weight: normal
  
@mixin oldStandard
  font-family: 'OldStandardTTRegular', Times, serif

@font-face
  font-family: 'OldStandardTTRegular'
  src: url('/fonts/old-standard/OldStandard-Regular-webfont.eot')
  src: local('OldStandardTTRegular'), url('/fonts/old-standard/OldStandard-Regular-webfont.woff') format('woff'), url('/fonts/old-standard/OldStandard-Regular-webfont.ttf') format('truetype'), url('/fonts/old-standard/OldStandard-Regular-webfont.svg') format('svg')
  font-weight: normal
  font-style: normal

@font-face
  font-family: 'OldStandardTTItalic'
  src: url('/fonts/old-standard/OldStandard-Italic-webfont.eot')
  src: local('OldStandardTTItalic'), url('/fonts/old-standard/OldStandard-Italic-webfont.woff') format('woff'), url('/fonts/old-standard/OldStandard-Italic-webfont.ttf') format('truetype'), url('/fonts/old-standard/OldStandard-Italic-webfont.svg') format('svg')
  font-weight: normal
  font-style: normal

@font-face
  font-family: 'OldStandardTTBold'
  src: url('/fonts/old-standard/OldStandard-Bold-webfont.eot')
  src: local('OldStandardTTBold'), url('/fonts/old-standard/OldStandard-Bold-webfont.woff') format('woff'), url('/fonts/old-standard/OldStandard-Bold-webfont.ttf') format('truetype'), url('/fonts/old-standard/OldStandard-Bold-webfont.svg') format('svg')
  font-weight: normal
  font-style: normal

